--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -21,12 +21,12 @@ updates:
     directory: "/"
     schedule:
       interval: "weekly"
-    # ignore:
-    #   - dependency-name: "hashicorp/aws"
+    ignore:
+      - dependency-name: "hashicorp/aws"
 
   - package-ecosystem: "terraform"
     directory: "/examples/account_names_starting_with_env"
     schedule:
       interval: "weekly"
-    # ignore:
-    #   - dependency-name: "hashicorp/aws"
+    ignore:
+      - dependency-name: "hashicorp/aws"
